--- a/askadia.html
+++ b/askadia.html
@@ -124,6 +124,163 @@
         </div>
       </section>
   
+  
+<div class="sec2">
+        <div class="column">
+        <h1>Добро пожаловать в <br/> Аскадия</h1>
+        <p id="text">Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Labore, magni vitae repellat consequatur veniam ullam nesciunt natus minus iure necessitatibus inventore eaque perspiciatis rerum suscipit reprehenderit voluptatibus pariatur at saepe.</p>
+        <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Libero voluptatem nihil esse vitae distinctio quisquam nulla ab earum totam, consequuntur commodi sint, explicabo, hic aliquid minus porro doloremque fuga. Sapiente.</p>
+        <p id="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio excepturi repellat obcaecati cumque laboriosam, aspernatur veritatis voluptatibus nam nemo voluptatem aliquid illo itaque nostrum tempore, quaerat accusamus id vero non.</p></div>
+        <div class="column"><img class="w-100" id="sec2-img" src="2.jpg.png"></div>
+    </div>
+        
+        <section class="new background pt-5 pb-5">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="text-center text-black" style="font-family: 'Montserrat', sans-serif;">
+                        Наша команда
+                    </h2>
+                    <p class="text-center text-black" style="font-family: 'Montserrat', sans-serif;">
+                        Наши доктора могут решить любую проблему которая находится  их компетенции
+                        <hr>
+                    </p>
+                </div>
+
+<div class="row">
+ <div class="col-lg-6">
+  <ul class="nav  flex-column">
+    <li class="nav-item">
+     <a class="nav-link active show" data-toggle="tab"href="#tab-1">
+<div class="card mb-2" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="1.jpg" class="img-fluid rounded-start" alt="dr">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <p class="card-text">Культаева Ляйля Айтбаевна<br>врач-гинеколог<br></p>
+        <p class="card-text"><small class="text-muted">Стаж работы: 20 лет</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</a>
+</li>
+
+<li class="nav-item">
+ <a class="nav-link" data-toggle="tab" href="#tab-2">
+  <div class="card mb-2" style="max-width: 540px;">
+   <div class="row g-0">
+    <div class="col-md-4">
+      <img src="2.jpg" class="img-fluid rounded-start" alt="dr">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <p class="card-text">Конишев Дмитрий Иванович<br>врач-реабилитолог, физиотерапевт<br></p>
+        <p class="card-text"><small class="text-muted">Стаж работы: 26 лет</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</a>
+</li>
+
+<li class="nav-item">
+<a class="nav-link"data-toggle="tab" href="#tab-3">
+<div class="card mb-2" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="3.jpg" class="img-fluid rounded-start" alt="dr">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <p class="card-text">Аскарова Карлыгаш Дакарбековна<br>врач-терапевт<br></p>
+        <p class="card-text"><small class="text-muted">Стаж работы: 6 лет</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</a>
+</li>
+
+<li class="nav-item">
+ <a class="nav-link"data-toggle="tab" href="#tab-4">
+<div class="card mb-2" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="4.jpg" class="img-fluid rounded-start" alt="dr">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <p class="card-text">Кульбаев Ринат Маратович<br>врач функциональной диагностики<br></p>
+        <p class="card-text"><small class="text-muted">Стаж работы: 9 лет</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</a>
+</li>
+
+</ul>
+</div>
+                    <div class="col-lg-6 mt-4 mt-lg-0">
+                        <div class="tab-content">
+                            <div class="tab-pane active show"id="tab-1">
+                                <div class="row">
+                                    <div class="col-lg-12 details order-2 order-lg-1">
+                                          <img src="1p.jpg" alt=""
+                                         style="border: 2px solid black; width:210px ; height: 300px;">
+                                        <h3 class="text-black">Культаева Ляйля Айтбаевна</h3>
+                                        <p class="font-poppins">
+                                            Сертификат специалиста по специальности общая врачебная практика
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane"id="tab-2">
+                                <div class="row">
+                                    <div class="col-lg-12 details order-2 order-lg-1">
+                                          <img src="2p.jpg" class="img-fluid" alt="" style="border: 2px solid black; width:215px ; height: 300px;">
+                                        <h3 class="text-black">Конишев Дмитрий Иванович</h3>
+                                        
+                                        <p class="font-poppins">
+                                           Сертификат специалиста по специальности общая врачебная практика 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane"id="tab-3">
+                                <div class="row">
+                                    <div class="col-lg-12 details order-2 order-lg-1">
+                                        <img src="3p.jpg"class="img-fluid"alt="" style="border: 2px solid black; width:215px ; height: 300px;">
+
+
+                                        <h3 class="text-black">Аскарова Карлыгаш Дакарбековна</h3>
+                                        <p class="font-poppins">
+                                            Сертификат специалиста по специальности общая врачебная практика 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane"id="tab-4">
+                                <div class="row">
+                                    <div class="col-lg-12 details order-2 order-lg-1">
+                                        <img src="4p.jpg"class="img-fluid"alt="" style="border: 2px solid black; width:215px ; height: 300px;">
+                                        <h3 class="text-black">Кульбаев Ринат Маратович</h3>
+                                        <p class="font-poppins">
+                                           Сертификат специалиста по специальности общая врачебная практика 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+  
    <footer>
         <section class="contact mt-5">
           <div class="container">
